--- a/second/templates/second/home.html
+++ b/second/templates/second/home.html
@@ -1,7 +1,7 @@
 {% extends "second/layout.html" %}
 
 {% block content %}
-<p> Привет! Я из home.html</p>
+<p class="new"> Привет! Я из home.html</p>
 
 {% include "second/includes/some_include.html" %}
 {% include "second/includes/some_include.html" %}
