--- a/second/templates/second/layout.html
+++ b/second/templates/second/layout.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     {% load static  %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}" type="text/css" >
+    <link rel="stylesheet" href="{% static 'css/new.css' %}" type="text/css" >
 </head>
 <body>
 {% block content%}
