--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -4,7 +4,7 @@
 {% block content %}
     {% for news in object_list %}
     123
-    <a href="/news/{{post.id}}"><h2> {{news.title}}</h2></a>
+    <a href="/news/{{news.id}}"><h2> {{news.title}}</h2></a>
     <h3> {{news.date | date:"d-m-Y" }}</h3>
 {% endfor %}
 {% endblock %}
